--- a/.travis.yaml
+++ b/.travis.yaml
@@ -1,3 +1,4 @@
+language: generic
 sudo: required
 services:
     - docker
@@ -18,7 +19,7 @@ before_install:
     - docker build -t shrey7197/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-    - docker run -e CI=true USERNAME/docker-react npm test
+    - docker run -e CI=true shrey7197/docker-react npm test
 
 deploy:
     provider: script
