--- a/.travis.yaml
+++ b/.travis.yaml
@@ -16,7 +16,7 @@ before_install:
   - gcloud config set compute/zone us-central1-c
   - gcloud container clusters get-credentials multi-cluster
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker build -t shrey7197/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t shrey7197/docker-react -f ./client/Dockerfile.dev ./client
 
 script:
   - docker run -e CI=true shrey7197/docker-react npm run test
